--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-pack",
+  "name": "css-bundle",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/KadenZipfel/sass-pack.git"
+    "url": "git+https://github.com/KadenZipfel/css-bundle.git"
   },
   "author": "Kaden Zipfel",
   "license": "ISC",
